[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "Spidey09"
version = "2.3.68"
description = "A powerful async Telegram bot for searching, extracting and processing ULP databases"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "ISmartCoder", url = "https://t.mehttps://t.me/+Nfd8677IdNg5MmQ1" }
]
keywords = ["telegram", "bot", "telethon", "ulp", "combo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
dependencies = [
    "telethon",
    "uvloop",
]

[project.scripts]
ItsMrULPBot = "main:asyncio.run(run_bot())"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*", "helpers*", "utils*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[project.urls]
"Homepage" = "https://t.me/+ssi90EfATyNiZmQ1"
"Bug Tracker" = "https://t.me/+ssi90EfATyNiZmQ1"
"Updates Channel" = "https://t.me/+Nfd8677IdNg5MmQ1"
